Add sidebar to single.php

--- a/wp-content/themes/simple/css/style.css
+++ b/wp-content/themes/simple/css/style.css
@@ -305,7 +305,6 @@ html {
 
 @media (max-width: 1000px) {
   .main__header .menu__content .menu__logo__image {
-    background-image: url(../images/main_simple_768.png);
     background-size: cover;
     width: 80%;
   }
@@ -1154,7 +1153,7 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 978px;
+  min-height: 978px;
   width: 100%;
   background-color: #023A5C;
 }
@@ -1169,7 +1168,7 @@ html {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 18%;
+  min-height: 169px;
   border-bottom: dotted 2px white;
 }
 
@@ -1190,7 +1189,7 @@ html {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 82%;
+  min-height: 769px;
   margin-top: 40px;
 }
 
@@ -1205,7 +1204,7 @@ html {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  height: 100%;
+  min-height: 100%;
 }
 
 .industries__gallery .gallery__item {
@@ -1277,11 +1276,11 @@ html {
 
 @media screen and (max-width: 1000px) {
   .industries {
-    height: 445px;
+    min-height: 445px;
     width: 100%;
   }
   .industries__header {
-    height: 77px;
+    min-height: 77px;
     border-bottom: dotted 1px white;
   }
   .industries__header .header__title {
@@ -1289,11 +1288,11 @@ html {
     padding: 5px 0px 0px 50px;
   }
   .industries__gallery {
-    height: 350px;
+    min-height: 350px;
     margin-top: 20px;
   }
   .industries__gallery .gallery__column {
-    height: 100%;
+    min-height: 100%;
     width: 187px;
   }
   .industries__gallery .gallery__item {
@@ -1330,11 +1329,11 @@ html {
 
 @media screen and (max-width: 786px) {
   .industries {
-    height: 458px;
+    min-height: 458px;
     width: 100%;
   }
   .industries__header {
-    height: 67px;
+    min-height: 67px;
     margin-bottom: 0px;
   }
   .industries__header .header__title {
@@ -1342,7 +1341,7 @@ html {
     line-height: 20px;
   }
   .industries__gallery {
-    height: 374px;
+    min-height: 374px;
     margin-top: 5px;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -1408,7 +1407,7 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 984px;
+  min-height: 984px;
   background-color: white;
   width: 100%;
 }
@@ -1427,7 +1426,7 @@ html {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 146px;
+  min-height: 146px;
   border-bottom: dotted 2px #023A5C;
 }
 
@@ -1448,7 +1447,7 @@ html {
 
 .products .products__description {
   margin-top: 60px;
-  height: 253px;
+  min-height: 253px;
 }
 
 .products__column {
@@ -1489,7 +1488,7 @@ html {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  height: 380px;
+  min-height: 380px;
 }
 
 .products__item {
@@ -1523,12 +1522,12 @@ html {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    height: 446px;
+    min-height: 446px;
     width: 100%;
   }
   .products__header {
     margin-top: 0px;
-    height: 74px;
+    min-height: 74px;
     border-bottom: dotted 2px #023A5C;
   }
   .products__header .header__image {
@@ -1544,7 +1543,7 @@ html {
     display: none;
   }
   .products__list {
-    height: 219px;
+    min-height: 219px;
     margin-top: 56px;
   }
   .products__column {
@@ -1568,12 +1567,12 @@ html {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    height: 460px;
+    min-height: 460px;
     width: 100%;
   }
   .products__header {
     margin-top: 0px;
-    height: 50px;
+    min-height: 50px;
     border-bottom: dotted 1px #023A5C;
   }
   .products__header .header__image {
@@ -1613,7 +1612,7 @@ html {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    height: 347px;
+    min-height: 347px;
     width: 100%;
     margin-top: 25px;
     text-align: center;
@@ -1628,7 +1627,7 @@ html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 978px;
+  min-height: 978px;
   width: 100%;
   background-color: #023A5C;
 }
@@ -1641,7 +1640,7 @@ html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 160px;
+  min-height: 160px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1682,7 +1681,7 @@ html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100%;
+  min-height: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -1715,6 +1714,7 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-transform: uppercase;
 }
 
 .services__item--speach {
@@ -1753,7 +1753,7 @@ html {
 }
 
 .services__description {
-  height: 331px;
+  min-height: 331px;
 }
 
 .services__text {
@@ -1777,7 +1777,7 @@ html {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    height: 445px;
+    min-height: 445px;
     width: 100%;
     background-color: #023A5C;
   }
@@ -1785,7 +1785,7 @@ html {
     display: none;
   }
   .services__header {
-    height: 87px;
+    min-height: 87px;
     border-bottom: dotted 1px white;
   }
   .services__item {
@@ -1862,7 +1862,7 @@ html {
 
 @media screen and (max-width: 786px) {
   .services {
-    height: 460px;
+    min-height: 460px;
     width: 100%;
   }
   .services__header {
@@ -2022,7 +2022,10 @@ html {
 }
 
 .news__item-image {
-  cursor: pointer;
+  width: 190px;
+  height: 190px;
+  -webkit-clip-path: circle();
+          clip-path: circle();
 }
 
 .news__item-image--rotate {
@@ -2087,15 +2090,6 @@ html {
   right: -52px;
 }
 
-.news__item .news__item-image {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.news .news__list--small {
-  display: none;
-}
-
 @media screen and (max-width: 1000px) {
   .news {
     height: 446px;
@@ -2150,7 +2144,10 @@ html {
     margin: 0px 10px;
   }
   .news__item .news__item-image {
-    width: 100%;
+    width: 112px;
+    height: 112px;
+    -webkit-clip-path: circle();
+            clip-path: circle();
   }
   .news__item .item__info {
     display: none;
@@ -2188,10 +2185,14 @@ html {
     height: 25px;
   }
   .news__item--arrow--left {
+    width: 16px;
+    height: 25px;
     left: -48px;
     top: 40%;
   }
   .news__item--arrow--right {
+    width: 16px;
+    height: 25px;
     right: -48px;
     top: 40%;
   }
@@ -2219,9 +2220,6 @@ html {
     font-size: 1.6rem;
   }
   .news__list {
-    display: none;
-  }
-  .news .news__list--small {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -2232,13 +2230,26 @@ html {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 100%;
     height: 387px;
   }
-  .news .news__list--small .news__item--small {
+  .news__list .news__slider {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+  .news__item {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -2249,67 +2260,61 @@ html {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 100%;
-    height: 370px;
-    margin-top: 25px;
+    height: 387px;
+    margin-top: 0px;
     color: #023A5C;
   }
-  .news .news__list--small .news__item--small .row {
+  .news__item .news__item-image {
+    margin: 0 auto;
+    width: 165px;
+    height: 165px;
+    -webkit-clip-path: circle();
+            clip-path: circle();
+  }
+  .news__item .item__info {
+    margin-top: 0px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-preferred-size: 185px;
+        flex-basis: 185px;
     width: 100%;
-    height: 164px;
   }
-  .news .news__list--small .news__item--small .row .item--small {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .news .news__list--small .news__item--small .row .item--small .item__image--small {
-    width: 164px;
-    height: 164px;
-  }
-  .news .news__list--small .news__item--small .row .news__item--arrow--left {
-    margin-right: 40px;
-    width: 21px;
-    height: 34px;
-  }
-  .news .news__list--small .news__item--small .row .news__item--arrow--right {
-    margin-left: 40px;
-    width: 21px;
-    height: 34px;
-    -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
-  }
-  .news .news__list--small .news__item--small .info__title--small {
+  .news__item .item__info .info__title {
     text-transform: uppercase;
     font-size: 1.6rem;
     margin-top: 10px;
   }
-  .news .news__list--small .news__item--small .info__date--small {
-    font-size: 1.6rem;
-    margin-top: 20px;
+  .news__item .item__info .info__link {
+    display: none;
   }
-  .news .news__list--small .news__item--small .info__text--small {
+  .news__item .item__info .info__text {
+    display: block;
+    text-align: center;
     width: 288px;
     height: 110px;
     font-size: 1.2rem;
+  }
+  .news__item .item__info .info__date {
+    font-size: 1.6rem;
+    margin-top: 20px;
+  }
+  .news__item .item__info .info__line {
+    display: none;
   }
 }
 
@@ -2324,7 +2329,7 @@ html {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 976px;
+  min-height: 976px;
   width: 100%;
   background-color: #023A5C;
 }
@@ -2339,7 +2344,7 @@ html {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 170px;
+  min-height: 170px;
   border-bottom: dotted 2px white;
 }
 
@@ -2358,31 +2363,31 @@ html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: 270px;
-  border-bottom: dotted 2px white;
+  -webkit-box-align: center !important;
+      -ms-flex-align: center !important;
+          align-items: center !important;
+  -webkit-box-pack: justify !important;
+      -ms-flex-pack: justify !important;
+          justify-content: space-between !important;
+  height: 270px !important;
+  border-bottom: dotted 2px white !important;
 }
 
 .contact__branch .branch__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: 181px;
-  font-size: 1.7rem;
-  font-weight: 300;
-  color: white;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-direction: normal !important;
+      -ms-flex-direction: column !important;
+          flex-direction: column !important;
+  -webkit-box-pack: justify !important;
+      -ms-flex-pack: justify !important;
+          justify-content: space-between !important;
+  height: 181px !important;
+  font-size: 1.7rem !important;
+  font-weight: 300 !important;
+  color: white !important;
 }
 
 .contact .submit__return {
@@ -2469,7 +2474,7 @@ html {
 
 .contact__submit .submit__send .send__form .form__input {
   margin-bottom: 14px;
-  width: 100%;
+  width: 420px;
   height: 32px;
   padding-left: 10px;
 }
@@ -2496,7 +2501,7 @@ html {
 
 .contact__submit .submit__send .send__form .form__text-area {
   margin-bottom: 14px;
-  width: 100%;
+  width: 420px;
   height: 86px;
   resize: none;
 }
@@ -2535,7 +2540,7 @@ html {
 }
 
 .contact__submit .submit__send .form__checkboxes .checkboxes__text {
-  width: 100%;
+  width: 420px;
   margin-bottom: 15px;
   padding-left: 10px;
 }
@@ -2639,10 +2644,10 @@ html {
 
 @media screen and (max-width: 1000px) {
   .contact {
-    height: 380px;
+    min-height: 380px;
   }
   .contact__header {
-    height: 86px;
+    min-height: 86px;
   }
   .contact__image {
     width: 50px;
@@ -2739,12 +2744,9 @@ html {
   }
   .contact__branch {
     display: none;
-    height: 164px;
   }
   .contact__branch .branch__item {
     display: none;
-    height: 136px;
-    font-size: 1.2rem;
   }
   .contact .contact__slider--small {
     display: -webkit-box;
@@ -3045,5 +3047,114 @@ html {
   .footer .footer__company__list {
     display: none;
   }
+}
+
+.post {
+  width: 100%;
+  min-height: 1345px;
+  background-color: white;
+}
+
+.post__header {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 220px;
+  border-bottom: 2px dotted #023A5C;
+  color: #023A5C;
+}
+
+.post__title {
+  font-size: 3rem;
+  text-transform: uppercase;
+}
+
+.post__info {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  right: 0px;
+  bottom: 0px;
+  margin: 0px 10px 10px 0px;
+  text-align: right;
+  width: 150px;
+  height: 60px;
+}
+
+.post__date {
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+
+.post__tags {
+  padding: 5px 0px;
+}
+
+.post__author {
+  width: 100%;
+}
+
+.post__user {
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.post .article {
+  width: 100%;
+  min-height: 1125px;
+}
+
+.post .article .main-article {
+  padding-top: 45px;
+  width: 100%;
+  min-height: 1125px;
+  -webkit-column-count: 2;
+          column-count: 2;
+  -webkit-column-width: 481px;
+          column-width: 481px;
+  -webkit-column-gap: 36px;
+          column-gap: 36px;
+}
+
+.post .article .main-article__title {
+  -webkit-column-span: all;
+          column-span: all;
+  margin-bottom: 30px;
+}
+
+.post .article .main-article__image {
+  width: 481px;
+  height: 348px;
+}
+
+.post .article .main-article__image .wp-post-image {
+  width: 100%;
+  height: 100%;
+}
+
+.post .article .main-article__text {
+  font-size: 1.7rem;
+  text-align: left;
+  width: 480px;
+  line-height: 20px;
+  padding: 20px 0px;
+  color: #023A5C;
+  font-weight: 300;
 }
 /*# sourceMappingURL=style.css.map */
