--- a/wp-content/themes/simple/sass/style.scss
+++ b/wp-content/themes/simple/sass/style.scss
@@ -112,3 +112,4 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import"contact";
 @import"footer";
 @import"post";
+@import"aside";
