--- a/wp-content/themes/simple/sass/style.scss
+++ b/wp-content/themes/simple/sass/style.scss
@@ -113,3 +113,4 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import"footer";
 @import"post";
 @import"aside";
+@import"news-list";
