--- a/wp-content/themes/simple/sass/_news-list.scss
+++ b/wp-content/themes/simple/sass/_news-list.scss
@@ -5,13 +5,13 @@
 
     &__item {
 
-        margin: 100px 0px;
+        margin: 40px 0px;
         display: flex;
         align-items: center;
         justify-content: center;
         // flex-wrap: wrap;
         // background-color: goldenrod;
-        height: 250px;
+        height: 200px;
 
 
         .item__info {
@@ -51,7 +51,7 @@
             }
 
             .item__description {
-                text-align: justify;
+                text-align: left;
                 font-size: calc(1.4rem + 0.25vw);
                 width: 70%;
             }
