Applaying corrections on img sidebar

--- a/wp-content/themes/simple/sass/_contact.scss
+++ b/wp-content/themes/simple/sass/_contact.scss
@@ -140,7 +140,7 @@
 
             .form__checkboxes {
                 display: flex;
-                flex-wrap: wrap;
+                // flex-wrap: wrap;
                 align-items: center;
                 height: 56px;
                 width: 295px;
